refactoring to handle all synchronization/checking to Module.java